# Autonomous-Waste-Sorting-System

./: CMakeLists.txt  README.md  package.xml
assets/: README.md
config/: controllers.yaml  sorting.rviz
launch/: sorting.launch
scripts/: color_detector.py  conveyor_driver.py  sorter_controller.py  system_dashboard.py  test_gates.py
src/: conveyor_mover.cpp  grinder_remover.cpp  random_box_spawner.cpp
urdf/: main_station.xacro
worlds/: sorting_world.sdf
